--- a/home.html
+++ b/home.html
@@ -6,19 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
 
     <title>Lynn's Portfolio</title>
 
 </head>
 <body> 
     <header>
-        <h1>Lynn's Portfolio</h1>
+        <h1 class="">Lynn's Portfolio</h1>
             <ul>
                 <div class="contents-area">
-                    <a href="typography.html" target="blank"><button>Typography</button></a>
-                    <a href="carp.html" target="blank"><button>CARP</button></a>
-                    <a href="coding.html" target="blank"><button>Coding</button></a>
-                    <a href="Reflection.html" target="blank"><button>Reflection</button></a>
+                    <a href="typography.html" target="blank"><li>Typography</button></li>
+                    <a href="carp.html" target="blank"><li>CARP</button></li>
+                    <a href="coding.html" target="blank"><li>Coding</button></li>
+                    <a style="text-decorations:none; color:inherit href="Reflection.html" target="blank" ><li>Reflection</button></li>
                 </div>
             </ul>
     </header>
