--- a/home.html
+++ b/home.html
@@ -7,27 +7,48 @@
 
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
-
+    <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
     <title>Lynn's Portfolio</title>
 
 </head>
 <body> 
     <header>
-        <h1 class="">Lynn's Portfolio</h1>
+        <h1 class="bigBold">Lynn's Portfolio</h1>
             <ul>
                 <div class="contents-area">
-                    <a href="typography.html" target="blank"><li>Typography</button></li>
-                    <a href="carp.html" target="blank"><li>CARP</button></li>
-                    <a href="coding.html" target="blank"><li>Coding</button></li>
-                    <a style="text-decorations:none; color:inherit href="Reflection.html" target="blank" ><li>Reflection</button></li>
+                    <a class ="menu" href="typography.html" target="blank"><li>Typography</button></li></a>
+                    <a class ="menu" href="carp.html" target="blank"><li>CARP</li></a>
+                    <a class ="menu" href="coding.html" target="blank"><li>Coding</li></a>
+                    <a class ="menu" href="Reflection.html" target="blank" ><li>Reflection</li></a>
                 </div>
             </ul>
     </header>
 </body>
 
+<section>
+    
+</section>
+
     <main>
         <div class="welcome">
-            <img src="http://placekitten.com/600/400">
-            <p>Welcome to Website of lynn<p>
+            <img class="home-img" src="http://placekitten.com/600/600">
+            <div class="main-box"></div>
+            <p class="main-para">Welcome to Website of lynn<p>
         </div>
     </main>
+
+<section>
+
+</section>
+
+<footer>
+    <p class="footer-msg">This Website was brought to you by lynn</p>
+       <ul>
+            <div class="social-media footer-containter" >
+                <a href="https://www.instagram.com/tomefan2002/" target="_blank"><li class="social-media">Instagram</li></a>
+                <a href="https://www.snapchat.com/add/tome_fan?share_id=6-IMnslf5pc&locale=en-GB" target="_blank"><li class="social-media">Snapchat</li></a>
+                <li  class="social-media">thomaslynn.2002@outlook.com</li>
+            </div>
+       </ul>
+   
+</footer>
