--- a/home.html
+++ b/home.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
     <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
+    <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
+    <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
     <title>Lynn's Portfolio</title>
 
 </head>
@@ -17,8 +19,11 @@
             <ul>
                 <div class="contents-area">
                     <a class ="menu" href="typography.html" target="blank"><li>Typography</button></li></a>
+                    <div class="content-gap1"></div> 
                     <a class ="menu" href="carp.html" target="blank"><li>CARP</li></a>
+                    <div class="content-gap2"></div> 
                     <a class ="menu" href="coding.html" target="blank"><li>Coding</li></a>
+                    <div class="content-gap3"></div>
                     <a class ="menu" href="Reflection.html" target="blank" ><li>Reflection</li></a>
                 </div>
             </ul>
@@ -33,7 +38,10 @@
         <div class="welcome">
             <img class="home-img" src="http://placekitten.com/600/600">
             <div class="main-box"></div>
-            <p class="main-para">Welcome to Website of lynn<p>
+                <div class="about-me-area">
+                    <p class="about-me">About Me</p>
+                    <p class="main-para">Welcome to Website<p>
+                </div>
         </div>
     </main>
 
@@ -42,7 +50,7 @@
 </section>
 
 <footer>
-    <p class="footer-msg">This Website was brought to you by lynn</p>
+    <p class="footer-msg"> &hearts; This Website was brought to you by lynn &hearts;</p>
        <ul>
             <div class="social-media footer-containter" >
                 <a href="https://www.instagram.com/tomefan2002/" target="_blank"><li class="social-media">Instagram</li></a>
