--- a/typography.html
+++ b/typography.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,126 +14,149 @@
     <title>Typographic Systems</title>
 
 </head>
-<body> 
+
+<body>
     <header>
-        <h1 class="bigBold">Lynn's Typography</h1>
-            <ul>
-                <div class="contents-area-typo">
-                    <a class ="menu" href="typography.html" target="blank"><li>Typography</button></li></a>
-                    <div class="content-gap1"></div> 
-                    <a class ="menu" href="carp.html" target="blank"><li>CARP</li></a>
-                    <div class="content-gap2"></div> 
-                    <a class ="menu" href="coding.html" target="blank"><li>Coding</li></a>
-                    <div class="content-gap3"></div>
-                    <a class ="menu" href="Reflection.html" target="blank" ><li>Reflection</li></a>
-                </div>
-            </ul>
+        <a href="home.html" target="_blank">
+            <h1 class="bigBold">Lynn's Typography</h1>
+        </a>
+        <ul>
+            <div class="contents-area-typo">
+                <a class="menu" href="home.html" target="blank">
+                    <li>Home</li>
+                </a>
+                <div class="content-gap1"></div>
+                <a class="menu" href="typography.html" target="blank">
+                    <li>Typography</button></li>
+                </a>
+                <div class="content-gap2"></div>
+                <a class="menu" href="carp.html" target="blank">
+                    <li>CARP</li>
+                </a>
+                <div class="content-gap1"></div>
+                <a class="menu" href="coding.html" target="blank">
+                    <li>Coding</li>
+                </a>
+                <div class="content-gap1"></div>
+                <a class="menu" href="Reflection.html" target="blank">
+                    <li>Reflection</li>
+                </a>
+            </div>
+        </ul>
     </header>
 </body>
 
 <section>
-    
+
 </section>
 
-    <main>
-        <div class="welcome">
-            <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-1.jpg" class="typo-imgs">
-            <div class="main-box"></div>
-                    <p class="typo-para">Welcome to Website of lynn<p>
-                </div>
-        </div>
-    </main>
+<main>
+    <div class="welcome">
+        <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-1.jpg" class="typo-imgs">
+        <div class="main-box"></div>
+        <p class="typo-para">Welcome to Website of lynn
+        <p>
+    </div>
+    </div>
+</main>
 
 <section>
 
 </section>
 
-    <main>
-        <div class="welcome">
-            <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-2.jpg" class="typo-imgs">
-            <div class="main-box"></div>
-                    <p class="typo-para">Welcome to Website of lynn<p>
-                </div>
-        </div>
-    </main>
+<main>
+    <div class="welcome">
+        <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-2.jpg" class="typo-imgs">
+        <div class="main-box"></div>
+        <p class="typo-para">Welcome to Website of lynn
+        <p>
+    </div>
+    </div>
+</main>
 
 <section>
 
 </section>
 
-    <main>
-        <div class="welcome">
-            <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-3.jpg" class="typo-imgs">
-            <div class="main-box"></div>
-                    <p class="typo-para">Welcome to Website of lynn<p>
-                </div>
-        </div>
-    </main>
+<main>
+    <div class="welcome">
+        <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-3.jpg" class="typo-imgs">
+        <div class="main-box"></div>
+        <p class="typo-para">Welcome to Website of lynn
+        <p>
+    </div>
+    </div>
+</main>
 
 <section>
 
 </section>
 
-    <main>
-        <div class="welcome">
-            <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-4.jpg" class="typo-imgs">
-            <div class="main-box"></div>
-                    <p class="typo-para">Welcome to Website of lynn<p>
-                </div>
-        </div>
-    </main>
+<main>
+    <div class="welcome">
+        <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-4.jpg" class="typo-imgs">
+        <div class="main-box"></div>
+        <p class="typo-para">Welcome to Website of lynn
+        <p>
+    </div>
+    </div>
+</main>
 
 <section>
 
 </section>
 
-    <main>
-        <div class="welcome">
-            <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-5.jpg" class="typo-imgs">
-            <div class="main-box"></div>
-                    <p class="typo-para">Welcome to Website of lynn<p>
-                </div>
-        </div>
-    </main>
+<main>
+    <div class="welcome">
+        <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-5.jpg" class="typo-imgs">
+        <div class="main-box"></div>
+        <p class="typo-para">Welcome to Website of lynn
+        <p>
+    </div>
+    </div>
+</main>
 
 <section>
 
 </section>
 
-    <main>
-        <div class="welcome">
-            <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-6.jpg" class="typo-imgs">
-            <div class="main-box"></div>
-                    <p class="typo-para">Welcome to Website of lynn<p>
-                </div>
-        </div>
-    </main>
+<main>
+    <div class="welcome">
+        <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-6.jpg" class="typo-imgs">
+        <div class="main-box"></div>
+        <p class="typo-para">Welcome to Website of lynn
+        <p>
+    </div>
+    </div>
+</main>
 
 <section>
 
 </section>
 
-    <main>
-        <div class="welcome">
-            <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-7.jpg" class="typo-imgs">
-            <div class="main-box"></div>
-                    <p class="typo-para">Welcome to Website of lynn<p>
-                </div>
-        </div>
-    </main>
+<main>
+    <div class="welcome">
+        <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-7.jpg" class="typo-imgs">
+        <div class="main-box"></div>
+        <p class="typo-para">Welcome to Website of lynn
+        <p>
+    </div>
+    </div>
+</main>
 
-    <section>
+<section>
 
 </section>
 
-    <main>
-        <div class="welcome">
-            <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-8.jpg" class="typo-imgs">
-            <div class="main-box"></div>
-                    <p class="typo-para">Welcome to Website of lynn<p>
-                </div>
-        </div>
-    </main>
+<main>
+    <div class="welcome">
+        <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-8.jpg" class="typo-imgs">
+        <div class="main-box"></div>
+        <p class="typo-para">Welcome to Website of lynn
+        <p>
+    </div>
+    </div>
+</main>
 
 <section>
 
@@ -140,12 +164,17 @@
 
 <footer>
     <p class="footer-msg"> &hearts; This Website was brought to you by lynn &hearts;</p>
-       <ul>
-            <div class="social-media footer-containter" >
-                <a href="https://www.instagram.com/tomefan2002/" target="_blank"><li class="social-media">Instagram</li></a>
-                <a href="https://www.snapchat.com/add/tome_fan?share_id=6-IMnslf5pc&locale=en-GB" target="_blank"><li class="social-media">Snapchat</li></a>
-                <li  class="social-media">thomaslynn.2002@outlook.com</li>
-            </div>
-       </ul>
-   
+    <a href="home.html" target="_blank"><p class="footer-home">Home</p></a>
+    <ul>
+        <div class="social-media footer-containter">
+            <a href="https://www.instagram.com/tomefan2002/" target="_blank">
+                <li class="social-media">Instagram</li>
+            </a>
+            <a href="https://www.snapchat.com/add/tome_fan?share_id=6-IMnslf5pc&locale=en-GB" target="_blank">
+                <li class="social-media">Snapchat</li>
+            </a>
+            <li class="social-media">thomaslynn.2002@outlook.com</li>
+        </div>
+    </ul>
+
 </footer>
