--- a/carp.html
+++ b/carp.html
@@ -11,17 +11,17 @@
     <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
     <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
     <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
-    <title>Lynn's Portfolio</title>
+    <title>Typographic Systems</title>
 
 </head>
 
 <body>
     <header>
         <a href="home.html" target="_blank">
-        <h1 class="bigBold">Lynn's Portfolio</h1>
+            <h1 class="bigBold">Lynn's Posters</h1>
         </a>
         <ul>
-            <div class="contents-area">
+            <div class="contents-area-carp">
                 <a class="menu" href="home.html" target="blank">
                     <li>Home</li>
                 </a>
@@ -52,14 +52,39 @@
 
 <main>
     <div class="welcome">
-        <img class="home-img" src="https://placekitten.com/600/600">
-        <div class="main-box-home"></div>
-        <div class="about-me-area">
-            <p class="about-me">About Me</p>
-            <p class="main-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-           
-            <p class="main-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
+        <img src="CARP POSTER 1.jpg" class="typo-imgs">
+        <div class="main-box-typo"></div>
+        <p class="typo-para">Welcome to Website of lynn
+        <p>
+    </div>
+    </div>
+</main>
+
+<section>
+
+</section>
+
+<main>
+    <div class="welcome">
+        <img src="CARP POSTER 2.jpg" class="typo-imgs">
+        <div class="main-box-typo"></div>
+        <p class="typo-para">Welcome to Website of lynn
+        <p>
+    </div>
+    </div>
+</main>
+
+<section>
+
+</section>
+
+<main>
+    <div class="welcome">
+        <img src="https://placekitten.com/404/572" class="typo-imgs">
+        <div class="main-box-typo"></div>
+        <p class="typo-para">Welcome to Website of lynn
+        <p>
+    </div>
     </div>
 </main>
 
@@ -78,7 +103,7 @@
             <a href="https://www.snapchat.com/add/tome_fan?share_id=6-IMnslf5pc&locale=en-GB" target="_blank">
                 <li class="social-media">Snapchat</li>
             </a>
-                <li class="social-media">thomaslynn.2002@outlook.com</li>
+            <li class="social-media">thomaslynn.2002@outlook.com</li>
         </div>
     </ul>
 
