--- a/typography.html
+++ b/typography.html
@@ -53,7 +53,7 @@
 <main>
     <div class="welcome">
         <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-1.jpg" class="typo-imgs">
-        <div class="main-box"></div>
+        <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
     </div>
@@ -67,7 +67,7 @@
 <main>
     <div class="welcome">
         <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-2.jpg" class="typo-imgs">
-        <div class="main-box"></div>
+        <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
     </div>
@@ -81,7 +81,7 @@
 <main>
     <div class="welcome">
         <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-3.jpg" class="typo-imgs">
-        <div class="main-box"></div>
+        <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
     </div>
@@ -95,7 +95,7 @@
 <main>
     <div class="welcome">
         <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-4.jpg" class="typo-imgs">
-        <div class="main-box"></div>
+        <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
     </div>
@@ -109,7 +109,7 @@
 <main>
     <div class="welcome">
         <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-5.jpg" class="typo-imgs">
-        <div class="main-box"></div>
+        <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
     </div>
@@ -123,7 +123,7 @@
 <main>
     <div class="welcome">
         <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-6.jpg" class="typo-imgs">
-        <div class="main-box"></div>
+        <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
     </div>
@@ -137,7 +137,7 @@
 <main>
     <div class="welcome">
         <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-7.jpg" class="typo-imgs">
-        <div class="main-box"></div>
+        <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
     </div>
@@ -151,7 +151,7 @@
 <main>
     <div class="welcome">
         <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-8.jpg" class="typo-imgs">
-        <div class="main-box"></div>
+        <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
     </div>
