--- a/carp.html
+++ b/carp.html
@@ -80,7 +80,7 @@
 
 <main>
     <div class="welcome">
-        <img src="https://placekitten.com/404/572" class="typo-imgs">
+        <img src="CARP POSTER 3.jpg" class="typo-imgs">
         <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
