website progress update

--- a/carp.html
+++ b/carp.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
     <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
     <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
-    <title>Typographic Systems</title>
+    <title>Lynn's Posters</title>
 
 </head>
 
