--- a/coding.html
+++ b/coding.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
     <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
     <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
-    <title>Typographic Systems</title>
+    <title>Lynn's Coding</title>
 
 </head>
 
@@ -52,7 +52,7 @@
 
 <main>
     <div class="welcome">
-        <img src="https://placekitten.com/404/572" class="typo-imgs">
+        <img src="First Coding assignment.png" class="typo-imgs">
         <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
@@ -66,7 +66,7 @@
 
 <main>
     <div class="welcome">
-        <img src="https://placekitten.com/404/572" class="typo-imgs">
+        <img src="Second Coding Assignment.png" class="typo-imgs">
         <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
@@ -80,7 +80,147 @@
 
 <main>
     <div class="welcome">
-        <img src="https://placekitten.com/404/572" class="typo-imgs">
+        <img src="Second Coding Assignment2.png" class="typo-imgs">
+        <div class="main-box-typo"></div>
+        <p class="typo-para">Welcome to Website of lynn
+        <p>
+    </div>
+    </div>
+</main>
+
+<section>
+
+</section>
+
+<main>
+    <div class="welcome">
+        <img src="Second Coding Assignment3.png" class="typo-imgs">
+        <div class="main-box-typo"></div>
+        <p class="typo-para">Welcome to Website of lynn
+        <p>
+    </div>
+    </div>
+</main>
+
+<section>
+
+</section>
+
+<main>
+    <div class="welcome">
+        <img src="Second Coding Assignment4.png" class="typo-imgs">
+        <div class="main-box-typo"></div>
+        <p class="typo-para">Welcome to Website of lynn
+        <p>
+    </div>
+    </div>
+</main>
+
+<section>
+
+</section>
+
+<main>
+    <div class="welcome">
+        <img src="Second Coding Assignment5.png" class="typo-imgs">
+        <div class="main-box-typo"></div>
+        <p class="typo-para">Welcome to Website of lynn
+        <p>
+    </div>
+    </div>
+</main>
+
+<section>
+
+</section>
+
+<main>
+    <div class="welcome">
+        <img src="Third Coding Assignment.png" class="typo-imgs">
+        <div class="main-box-typo"></div>
+        <p class="typo-para">Welcome to Website of lynn
+        <p>
+    </div>
+    </div>
+</main>
+
+<section>
+
+</section>
+
+<main>
+    <div class="welcome">
+        <img src="Third Coding Assignment2.png" class="typo-imgs">
+        <div class="main-box-typo"></div>
+        <p class="typo-para">Welcome to Website of lynn
+        <p>
+    </div>
+    </div>
+</main>
+
+<section>
+
+</section>
+
+<main>
+    <div class="welcome">
+        <img src="Third Coding Assignment3.png" class="typo-imgs">
+        <div class="main-box-typo"></div>
+        <p class="typo-para">Welcome to Website of lynn
+        <p>
+    </div>
+    </div>
+</main>
+
+<section>
+
+</section>
+
+<main>
+    <div class="welcome">
+        <img src="Third Coding Assignment4.png" class="typo-imgs">
+        <div class="main-box-typo"></div>
+        <p class="typo-para">Welcome to Website of lynn
+        <p>
+    </div>
+    </div>
+</main>
+
+<section>
+
+</section>
+
+<main>
+    <div class="welcome">
+        <img src="Third Coding Assignment5 (secondpage).png" class="typo-imgs">
+        <div class="main-box-typo"></div>
+        <p class="typo-para">Welcome to Website of lynn
+        <p>
+    </div>
+    </div>
+</main>
+
+<section>
+
+</section>
+
+<main>
+    <div class="welcome">
+        <img src="Third Coding Assignment6 (thirdpage).png" class="typo-imgs">
+        <div class="main-box-typo"></div>
+        <p class="typo-para">Welcome to Website of lynn
+        <p>
+    </div>
+    </div>
+</main>
+
+<section>
+
+</section> 
+
+<main>
+    <div class="welcome">
+        <img src="Carousel Slider.png" class="typo-imgs">
         <div class="main-box-typo"></div>
         <p class="typo-para">Welcome to Website of lynn
         <p>
