--- a/home.html
+++ b/home.html
@@ -52,13 +52,11 @@
 
 <main>
     <div class="welcome">
-        <img class="home-img" src="https://placekitten.com/600/600">
+        <img class="home-img" src="https://placekitten.com/1000/600">
         <div class="main-box-home"></div>
         <div class="about-me-area">
             <p class="about-me">About Me</p>
-            <p class="main-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-           
-            <p class="main-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="main-para-home">Hi, My name is Thomas Lynn, the creator of this website. I am currently a Student at UWE studying Digital Media. I grew up in South Wales my entire life and moved to Bristol at 18 to begin my University career.</p>
         </div>
     </div>
 </main>
