--- a/typography.html
+++ b/typography.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
     <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
     <link rel="stylesheet" href="https://use.typekit.net/lun3ziz.css">
-    <title>Typographic Systems</title>
+    <title>Lynn's Typography</title>
 
 </head>
 
@@ -54,7 +54,7 @@
     <div class="welcome">
         <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-1.jpg" class="typo-imgs">
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
+        <p class="typo-para">Axial, the first of the typographic systems in characterised by text that along axies that are perpendicular to each other. I found creating this piece quite fun going through a couple design iterations before settling on the one to the Left.
         <p>
     </div>
     </div>
@@ -68,8 +68,7 @@
     <div class="welcome">
         <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-2.jpg" class="typo-imgs">
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
-        <p>
+        <p class="typo-para">Radial, the second typographic system is characterised by text along an axies that a central to one point. I found this typographic system one of my favorites to design and create and I quite like how the finished product looks.
     </div>
     </div>
 </main>
@@ -82,7 +81,7 @@
     <div class="welcome">
         <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-3.jpg" class="typo-imgs">
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
+        <p class="typo-para">Thirdly, Dilatational, the third typographic system, unlike radial the axies/paths that the text is being written on follow the circumferances of various sized circles to create a unique appearance. I found this typographic system again fun to design and iterate to create this final product.
         <p>
     </div>
     </div>
@@ -96,7 +95,7 @@
     <div class="welcome">
         <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-4.jpg" class="typo-imgs">
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
+        <p class="typo-para">Random, the fourth typographic system really speaks for itself, its random with no discernible pattern like the previous three systems. Again, I enjoyed creating this system and went in completley blind and just tried to make everything as random as I was able. 
         <p>
     </div>
     </div>
@@ -110,7 +109,7 @@
     <div class="welcome">
         <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-5.jpg" class="typo-imgs">
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
+        <p class="typo-para">Fifthly, the Grid, this typographic system similarly to axial is one that used horizontal and vetical lines that helps to guide the layout. Probably my favourite system and my favourite finished product, I found this quite fun to make and enjoyed how all the elements are neatly aligned.
         <p>
     </div>
     </div>
@@ -124,7 +123,7 @@
     <div class="welcome">
         <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-6.jpg" class="typo-imgs">
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
+        <p class="typo-para"> The sixth typographic system, Modular, can be characterised by text contained within 'modules' that can come a variety of forms e.g. squares or circles like the image to the left. I found that this was among my favourites to design because although I was limited by the modules I could implement some of the other typographic systems inside of them to create, what I think, is a unique appearance. 
         <p>
     </div>
     </div>
@@ -138,8 +137,7 @@
     <div class="welcome">
         <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-7.jpg" class="typo-imgs">
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
-        <p>
+        <p class="typo-para">Transitional, possibly the most unique of the typograhic systems, is characterised by text along a path that can sometimes look like a cross-section of the Earth. I found this system easily the hardest to design but a welcome challenge. After a few iterations and sketches I came up with the finished pruduct to the left and quite enjoy how it turned out.
     </div>
     </div>
 </main>
@@ -152,7 +150,7 @@
     <div class="welcome">
         <img src="TYPOGRAHPIC SYSTEMS TASK!!! FINAL-8.jpg" class="typo-imgs">
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
+        <p class="typo-para">Finally, probably the most common of the typograhic systems, Bilateral. This system is seen everywhere an is characterised by text that follows paths perpendicular to a central vertical axis symmetrically. It is one of the more basic typographic systems but this doesn't mean it can't allow for unique and eyecatching design. My second favourite of the pieces I designed and created I found it enjoyable to create and tried to see what I could do to make it unique to me and I'm very pleased with the final product. 
         <p>
     </div>
     </div>
