--- a/carp.html
+++ b/carp.html
@@ -54,7 +54,7 @@
     <div class="welcome">
         <img src="CARP POSTER 1.jpg" class="typo-imgs">
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
+        <p class="typo-para">For this poster I wanted to try and keep a certain level of minimalism. For this reason I tried to keep a Monocromatic colourscheme with the addition of some Red accents which I think really pulls the design together. Overall I foud this poster fun to make but it took me a moment to get the ball rolling. 
         <p>
     </div>
     </div>
@@ -68,7 +68,7 @@
     <div class="welcome">
         <img src="CARP POSTER 2.jpg" class="typo-imgs">
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
+        <p class="typo-para">For this poster I took heavy inspiration from the pieces of De Stijl artist Piet Mondian. I have enjoyed his pieces and Theo van Doesburg's since the beginning of A levels and because of this they have become some of my favourite Modernists. 
         <p>
     </div>
     </div>
@@ -82,7 +82,7 @@
     <div class="welcome">
         <img src="CARP POSTER 3.jpg" class="typo-imgs">
         <div class="main-box-typo"></div>
-        <p class="typo-para">Welcome to Website of lynn
+        <p class="typo-para">Finally, for my third poster I wanted try and capture an old feel. I took inspiration from early hot air balloons. I chose to used again a quite Monocromatic colourscheme and again used a red as an accent. 
         <p>
     </div>
     </div>
